<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:text="@string/item"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_grey_color" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_text"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.06"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_grey_color" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:text="@string/location"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_grey_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/store_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:text="@string/price"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_grey_color" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/price_text"
            android:layout_weight="0.06"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:text="@string/link"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_grey_color" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:autoLink="web"
            android:id="@+id/url_text"
            android:layout_weight="0.06"
            android:textColorLink="#ff44b3ff"
            android:linksClickable="true" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_gift"
        android:id="@+id/delete_button"
        android:layout_weight="0.06"
        android:textColor="@color/app_red_color"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_gift"
        android:id="@+id/share_button"
        android:layout_weight="0.06"
        android:background="@color/app_red_color"
        android:textColor="#ffffffff" />

</LinearLayout>